# Celbridge

./: .gitignore  BuildInstructions.md  CONTRIBUTING.md  CelRuntime.md  Celbridge.sln  LICENSE.txt  README.md  THIRD-PARTY-LICENSES.txt  UnoPlatformNotes.md
CelLegacy/OpenAI/: OpenAIUtilities.cs
CelLegacy_/: CelLegacy.csproj
CelRuntime/: CelRuntime.csproj  Chat.cs  Environment.cs  Markdown.cs  Process.cs  Sheet.cs  TextFile.cs
CelRuntime/Utils/: Result.cs
CelStandardLibrary/: CelStandardLibrary.csproj  Environment.cs  TextFile.cs
CelStandardLibrary/Interfaces/: IChatService.cs
CelUtilities/: CelLegacy.csproj  CelUtilities.csproj
CelUtilities/ErrorHandling/: Result.cs
CelUtilities/Media/: MediaUtils.cs
CelUtilities/OpenAI/: OpenAIUtilities.cs
CelUtilities/Resources/: ResourceUtils.cs
Celbridge/: .editorconfig  .vsconfig  Celbridge.sln  Directory.Build.props  Directory.Packages.props  global.json
Celbridge/BaseLibrary/: Celbridge.BaseLibrary.csproj  GlobalUsings.cs
Celbridge/CelLegacy/: CelLegacy.csproj  GlobalUsings.cs
Celbridge/Celbridge.Base/: AppHead.xaml  AppHead.xaml.cs  base.props
Celbridge/Celbridge.BaseLibrary/: CelServiceAttribute.cs  Celbridge.BaseLibrary.csproj  GlobalUsings.cs  IConsoleService.cs  ILoggingService.cs
Celbridge/Celbridge.Commands/: Celbridge.Commands.csproj  CommandService.cs  GlobalUsings.cs  (+1 more)
Celbridge/Workspace/Celbridge.Python/Assets/Python/celbridge/: LICENSE  README.md  pyproject.toml
Celbridge/Workspace/Celbridge.Python/Assets/Python/celbridge/src/celbridge/: customize_ipython.py  exit_message.py
Celbridge/Workspace/Celbridge.Python/Assets/PythonModules/celbridge/: PUBLISHING.md  README.md  pyproject.toml
Celbridge/Workspace/Celbridge.Python/Assets/PythonModules/celbridge/src/celbridge/: __init__.py  __main__.py
CelbridgeEditor/: Celbridge.sln
CelbridgeMigration/: CelbridgeMigration.csproj
CelbridgeWebUtils/: Program.cs
DemoCelProject/: CelbridgeDemo.celbridge  Project.cel  Readme.txt
Docs/: # DispatcherSetup.md  AutomatedTesting.md  AutomaticUpdates.md  BuildingSourceCode.md  CelUtilities.md  CelbridgeArchitecture.md  CelbridgeWebUtils.md  ConsoleLogging.md  DependencyInjection.md  DeployingToWSL.md  Docs.celbridge  ErrorHandling.md  ExtendingTitleBar.md  FontIcons.md  GettingStarted.md  Localization.md  MonacoTextEditor.md  MultipleWindows.md  Styling.md  UsingGithub.md  VisualStudioOddities.md  VisualStudioProjectSetup.md  WorkspacesAndServices.md
celbridge_examples/: celbridge_examples.celbridge
examples/: examples.celbridge
(+2506 files in other folders)
